[module2] Add fixed height to sections so they are aligned

--- a/assignment_module2/css/menu_style.css
+++ b/assignment_module2/css/menu_style.css
@@ -10,6 +10,7 @@
     position: relative;
     padding: 10px;
     padding-top: 35px;
+    height: 250px;
 }
 
 @media (min-width: 992px) {
